# CarPeopleProject

./: README.md  README.md~  main.cpp  ttt.txt
OPENCV_1/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  pgm
OPENCV_1/src/: main.cpp
build-OPENCV_1-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  pgm.cbp
build-src-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  countCars  countCars.cbp
car_project/: CMakeLists.txt  CMakeLists.txt~
car_project/src/: IPM.cpp  IPM.cpp.autosave  main.cpp
ourproject/: CMakeLists.txt
ourproject/src/: main.cpp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  countCars  main.cpp  main.cpp.autosave
test_vanishing/src/: Blob.cpp  Blob.h  IPM.cpp  IPM.h  main.cpp
